# lib-adis-secrets

./: .gitignore  ADIS-SECRETS-PRINCIPLES.md  AGENTS.md  README.md  manifest.yml  pyproject.toml  verify.py  verify_infisical.py
adis_secrets/: __init__.py  client.py  config.py  manifest.py  reader.py  writer.py
adis_secrets.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adis_secrets/backends/: aws.py  file.py  gcp.py  infisical.py  infisical_rest.py
adis_secrets/utils/: infisical_client.py  infisical_test.py
artifacts/: arch_constitution.md  arch_principles.md
tests/: test_backends.py  test_config.py  test_path_contexts.py  test_reader.py  test_writer.py
tmp/: infiscal_client.py  test3.py
