[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adis-secrets"
version = "0.4.0"
requires-python = ">=3.11"
dependencies = ["pyyaml", "requests"]

[project.optional-dependencies]
aws = ["boto3"]
gcp = ["google-cloud-secret-manager"]

[tool.setuptools.packages.find]
include = ["adis_secrets*"]